--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,10 @@ before_install:
 
 script: 
   - docker run akshaya1234/docker-react npm run test -- --coverage
+
+deploy:  
+  provider: elasticbeanstalk
+  region: "eu-north-1"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: 
